Fixed alignment of switch handles

--- a/src/scss/components/forms/_clickable.scss
+++ b/src/scss/components/forms/_clickable.scss
@@ -15,7 +15,6 @@
 
         + label {
             display: inline-flex;
-            align-items: center;
             font-size: $form-font-size-default;
 
             &:before, &:after {
@@ -226,14 +225,15 @@
 
                 // Handle
                 &:after {
-                    background: $color-white;
-                    position: absolute;
-                    border-radius: 50%;
                     content: "";
                     display: block;
+                    position: absolute;
+                    background: $color-white;
+                    border-radius: 50%;
                     height: $switch-handle-size;
                     width: $switch-handle-size;
                     left: $switch-handle-off-offset;
+                    top: $switch-handle-top-offset;
                     transition: $switch-handle-transition;
                 }
             }
@@ -257,9 +257,24 @@
 			}
         }
 
-        @each $size, $fontSize in $form-size-list {
+        @each $size, $fontSize in $switch-size-list {
             &.#{$size} {
                 font-size: $fontSize;
+
+                input[type="checkbox"] + label {
+                    &:before {
+                        @if $size == medium {
+                            height: 1.625rem;
+                        } 
+                    }
+
+                    &:after {
+                        @if $size == small {
+                            top: 0.125rem;
+                            height: 0.75rem;
+                        } 
+                    }
+                }
             }
         }
 
